feat: generate docs
